tests/tls/resources/mm-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: modelmesh-serving
  labels:
    app.kubernetes.io/instance: modelmesh-controller
    app.kubernetes.io/managed-by: modelmesh-controller
    app.kubernetes.io/name: modelmesh-controller
    modelmesh-service: modelmesh-serving
spec:
  to:
    kind: Service
    name: modelmesh-serving
  tls: null
  port:
    targetPort: http
  alternateBackends: []
